# data-structures-and-algorithms

./: .gitattributes
asm/: .gitignore  CMakeLists.txt
asm/include/linked_lists/: singly.h
asm/src/: CMakeLists.txt
asm/src/linked_lists/: CMakeLists.txt
asm/src/linked_lists/singly/: node.s
c/: CMakeLists.txt
c/include/linked_lists/: doubly.h  singly.h
c/src/linked_lists/: CMakeLists.txt  doubly.c  singly.c
cpp/: .gitignore  CMakeLists.txt
cpp/linked_lists/: CMakeLists.txt
cpp/linked_lists/singly/: list.hpp  list.inl
cpp/linked_lists/singly/tests/: CMakeLists.txt  tests.cpp
cpp/stack/: CMakeLists.txt  stack.hpp  stack.inl
cpp/stack/tests/: CMakeLists.txt  tests.cpp
go/: go.mod
go/internal/data_structures/linked_lists/singly/: list.go  node.go
python/: pyproject.toml
python/src/dsa/: __init__.py
python/src/dsa/data_structures/linked_lists/: interface.py  singly.py
rust/: .gitignore  Cargo.toml
rust/src/: linked_lists.rs
rust/src/linked_lists/: node.rs  singly.rs
ts/: .gitignore  package-lock.json  package.json  tsconfig.json
ts/src/data_structures/linked_lists/: linked_list.interface.ts  node.ts  singly.ts
